--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,15 @@
     <title>Gabriel Mônico | Front-End </title>
     <link rel="shortcut icon" href="img/TAG.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Bungee+Tint&display=swap');
+        </style>
+
 </head>
+
 <body>
 
     <header>
@@ -21,13 +29,11 @@
     <main>
         <section>
             <h3>Habilidades</h3>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>Node.js</li>
-            </ul>
+                <i class="fa-brands fa-html5"></i>
+                <i class="fa-brands fa-css3-alt"></i>
+                <i class="fa-brands fa-js"></i>
+                <i class="fa-brands fa-node"></i>
+                <i class="fa-brands fa-react"></i>
         </section>
 
         <article>
@@ -42,7 +48,7 @@
         </main>
 
         <aside>
-            
+            <img src="img/Face.jpeg" alt="eu">
 
         </aside>
 
